# pytest-logdog

./: DESIGN.md  README.md  TODO.md  setup.cfg  tests.py
pytest_logdog/: plugin.py
