[metadata]
name = pytest-logdog
description = Pytest plugin to test logging
long_description = file: README.md
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/pytest-logdog
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
    Framework :: Pytest

[options]
packages = pytest_logdog
python_requires = >=3.7
install_requires =
    pytest>=6.2.0

[options.entry_points]
pytest11 =
    logdog = pytest_logdog.plugin
